# biblioteca-flask

./: .gitignore  CONVENTIONS.md  README.md
backend/src/application/libro_api/: __init__.py  routes.py
catalogo/: .env.example  .mypy.ini  pyproject.toml
catalogo/migrations/versions/: 806a0d8b2792_.py  ba463497fbba_.py
catalogo/src/: config.py  run.py
catalogo/src/application/: __init__.py  helpers.py  models.py  transformations.py
catalogo/src/application/libro_api/: __init__.py  routes.py
catalogo/src/tests/: test_app.py
catalogo/tests/: fixture.py  test_app.py  test_helpers.py
dev/: info.md
frontend/: .eslintrc.cjs
frontend/src/: App.css  App.tsx  assertTypes.ts  index.css  types.d.ts
frontend/src/components/: BookList.css  BookList.tsx  Libro.tsx  LineaUsuario.tsx  LoanList.css  LoanList.tsx
frontend/src/services/: fetchData.ts  getBookById.ts  presenterLineaUsuario.ts
prestamos/: .gitignore  .prettierrc  package-lock.json  package.json
prestamos/src/: index.ts  types.d.ts
prestamos/src/routes/: loans.ts  socios.ts
prestamos/src/services/: loans.ts  loansData.json  socios.ts  sociosData.json
